# agentic_sql

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
frontend/: app.py
scripts/: seed_nba_to_postgres.py
src/agentic_sql/: __init__.py  limiter.py  logger.py  main.py
src/agentic_sql/agents/: __init__.py  coordinator.py  explanation_agent.py  schema_agent.py  sql_agent.py  suggestion_agent.py  validation_agent.py  visualization_agent.py
src/agentic_sql/api/: routes.py
src/agentic_sql/db/: config.py  connection.py  engine.py  erd.py  schema.py
src/agentic_sql/execution/: sql_executor.py
tests/: conftest.py  test_coordinator_agent.py  test_db_connection.py  test_schema_agent.py  test_schema_inspection.py  test_sql_agent.py  test_validation_and_execution.py  test_visualization_agent.py
