[project]
name = "agentic-sql"
version = "1.0.0"
description = "Natural-language-to-SQL multi-agent system powered by LangGraph and GPT-4o-mini"
readme = "README.md"
authors = [
    { name = "Rizwan Aslam", email = "letsmailriz@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "fastapi>=0.124.4",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.1",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.1",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
agentic-sql = "agentic_sql.main:app"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
